--- a/PCCleaner/PCCleaner.csproj
+++ b/PCCleaner/PCCleaner.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationSettings.cs" />
+    <Compile Include="Common\Enum.cs" />
+    <Compile Include="Common\Navgiators.cs" />
     <Compile Include="Controls\Cleaner\UCCleaner.cs">
       <SubType>UserControl</SubType>
     </Compile>
