--- a/PCCleaner/packages.config
+++ b/PCCleaner/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite.Core" version="2.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
@@ -9,4 +10,8 @@
   <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.7" targetFramework="net461" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.7" targetFramework="net461" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.7" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.108.0" targetFramework="net461" />
 </packages>
