--- a/PCCleaner/App.config
+++ b/PCCleaner/App.config
@@ -25,6 +25,6 @@
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
   <appSettings>
-    <add key="SubscriptionURL" value="http://cleanerservice.com/"/>
+    <add key="SubscriptionURL" value="http://sangamtransport.com/"/>
   </appSettings>
 </configuration>
