--- a/PCCleaner/packages.config
+++ b/PCCleaner/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Data.Sqlite" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite.Core" version="2.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="RestSharp" version="106.2.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.7" targetFramework="net461" />
   <package id="SQLitePCLRaw.core" version="1.1.7" targetFramework="net461" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.7" targetFramework="net461" />
