--- a/PCCleaner/packages.config
+++ b/PCCleaner/packages.config
@@ -15,4 +15,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Linq" version="1.0.108.0" targetFramework="net461" />
+  <package id="TaskScheduler" version="2.8.1" targetFramework="net461" />
 </packages>
